--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ protobuf==3.15.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
+psycopg2-binary==2.8.6
 python-dotenv==0.15.0
 pytz==2021.1
 requests==2.25.1
