--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
 Django==3.1.7
+djangorestframework==3.12.2
 google-api-core==1.26.0
 google-api-python-client==1.12.8
 google-auth==1.27.0
