--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.3.1
+bootstrap-admin==0.4.4
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
@@ -15,10 +16,10 @@ idna==2.10
 oauthlib==3.1.0
 packaging==20.9
 protobuf==3.15.3
+psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
-psycopg2-binary==2.8.6
 python-dotenv==0.15.0
 pytz==2021.1
 requests==2.25.1
